--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -1,10 +1,21 @@
-.container{
+.container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100%;
+    height: 10vh;
     width: 100%;
     background-color: #f5f5f5;
     padding: 10px;
     box-sizing: border-box;
+}
+
+.burgerMenu {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .burgerMenu {
+        display: block;
+        cursor: pointer;
+    }
 }
