--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -1,12 +1,70 @@
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 10vh;
-    width: 100%;
-    background-color: #f5f5f5;
-    padding: 10px;
-    box-sizing: border-box;
+    display:flex;
+    align-items: center;
+    padding: 20px 0px;
+    width: 1200px;
+    margin: 0px auto;
+}
+
+.fadedGridLeft {
+    position: absolute;
+    left: 0;
+    top:0;
+    width: 700px;
+    height: 500px;
+    opacity: 0.2;
+}
+
+.fadedGridRight {
+    position: absolute;
+    right: 0;
+    width: 700px;
+    height: 500px;
+    opacity: 0.2;
+}
+
+.logo {
+    margin-right: 30px;
+}
+
+.logo h1 {
+    color: var(--text-light);
+}
+
+.links {
+    display:flex;
+    gap: 10px;
+}
+
+.links a {
+    text-decoration: none;
+    color: var(--text-light);
+    font-size: 15px;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.links a:hover {
+    background: #1c1c4e;
+}
+
+.bigButtons {
+    margin-left: auto;
+    display:flex;
+    gap: 10px;
+}
+
+.bigButtons button {
+    padding: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    border:none;
+    font-size: 15px;
+}
+
+.bigButtons button:last-child {
+    background: #4945ff;
+    color: var(--text-light);
 }
 
 .burgerMenu {
