--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -11,6 +11,14 @@
     display: flex;
     position: relative;
     justify-content: center;
+    z-index: -1;
+}
+
+.blueOverlay {
+    background: #121180;
+    width: 100%;
+    height: 950px;
+    position: fixed;
     z-index: -10;
 }
 
