--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 20px 0px;
     width: 1200px;
     margin: 0px auto;
@@ -46,13 +47,13 @@
 .links a {
     text-decoration: none;
     color: var(--text-light);
-    font-size: 15px;
+    font-size: 18px;
     padding: 5px 10px;
     border-radius: 5px;
 }
 
 .links a:hover {
-    background: #1c1c4e;
+    background: #29294f;
 }
 
 .bigButtons {
