header and footer STYLES edit also the hero headline style

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,11 +1,46 @@
 .container {
-    width: 1200px;
-    margin: 0px auto;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    width: 100%;
+    /* border-top: 1px solid rgba(0, 0, 0, 0.2); */ 
     padding: 30px 0px;
+    text-align: center;
+    background-color: var(--text-dark);
+    color: var(--text-light);
+}
+.logo{
+        display: inline-flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 25vh;
+}
+
+.footerRow{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.footerCol{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: left;
+}
+
+.footerCol .footerColBox{
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+}
+.footerCol .footerColBox a{
+    text-decoration: none;
+    color: var(--text-light);
+}
+.footerCol h2{
+    text-align: center;
 }
 
 .copyrightText {
-    color: var(--text-dark);
     font-size: 12px;
 }
