--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1200px;
+    width: 100%;
     margin: 0px auto;
 }
 
@@ -8,10 +8,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px auto;
+    /* margin: 20px auto; */
 }
 
 .title h1 {
-    font-size: 60px;
+    /* font-size: 60px; */
     color: var(--text-light);
 }
