--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -15,3 +15,11 @@
     /* font-size: 60px; */
     color: var(--text-light);
 }
+
+.responsiveContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px auto;
+}
