footer not empty socialLinks maping

--- a/src/components/showcasing/mainSection.module.css
+++ b/src/components/showcasing/mainSection.module.css
@@ -27,6 +27,12 @@
 }
 
 
+@media screen and (max-width: 1440px) {
+    .mainSectionCol h1{
+        font-size: 62px;
+    }
+
+}
 @media screen and (max-width: 768px) {
     .mainSectionEmptyCol{
         display: none;
