--- a/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
+++ b/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
@@ -6,11 +6,9 @@
     width: 100%;
     max-width: 300px;
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    margin-bottom: 20px;
+    box-shadow: 5px 3px 5px var(--logoAbundantColor);
+    background-color: var(--text-light);
 }
 
 @media (min-width: 768px) {
