--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -13,13 +13,5 @@
 
 .title h1 {
     /* font-size: 60px; */
-    color: var(--text-light);
-}
-
-.responsiveContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin: 20px auto;
+    /* color: var(--text-light); */
 }
