--- a/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
+++ b/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
@@ -1,68 +1,50 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 300px;
+    display:flex;
+    gap: 20px;
+    background: #f6faff;
     padding: 20px;
-    border-radius: 5px;
-    box-shadow: 5px 3px 5px var(--logoAbundantColor);
-    background-color: var(--text-light);
-}
-
-@media (min-width: 768px) {
-    .card {
-        flex-direction: row;
-        max-width: 600px;
-    }
+    border-radius: 15px;
+    box-shadow: 1px 1px 3px #00000030;
 }
 
 .media {
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-}
-
-@media (min-width: 768px) {
-    .media {
-        width: 50%;
-        margin-bottom: 0;
-        margin-right: 20px;
-    }
+    width: 600px;
+    border-radius: 15px;
 }
 
 .content {
-    width: 100%;
+    padding: 20px;
+    position:relative;
 }
 
-@media (min-width: 768px) {
-    .content {
-        width: 50%;
-    }
+.content .title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #0089ff;
 }
 
-.title {
-    font-size: 18px;
+.content .description {
+    font-size: 16px;
+    color: var(--text-dark);
+}
+
+.content .previewWebsiteButton {
+    padding: 15px;
+    border: 1px solid #0089ff;
+    background: #0089ff;
     font-weight: bold;
-    margin-bottom: 10px;
-    color: black; /* Added */
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    color: var(--text-light);
+    margin-bottom: 20px;
+    position: absolute;
+    bottom: 0;
+    transition: all 0.2s;
 }
 
-@media (min-width: 768px) {
-    .title {
-        font-size: 24px;
-    }
-}
-
-.description {
-    font-size: 14px;
-    margin-bottom: 10px;
-    color: black; /* Added */
-}
-
-@media (min-width: 768px) {
-    .description {
-        font-size: 16px;
-    }
+.previewWebsiteButton:hover {
+    background: transparent;
+    color: #0089ff;
+    /* transform: translateY(5px) scale(0.95); */
 }
