Update footer and top vector img

--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -1,9 +1,10 @@
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 20px 0px;
-    width: 100%;
+    width: 1200px;
+    margin: 0px auto;
     height: var(--navigationBarHight);
     z-index: 10;
 }
@@ -54,7 +55,7 @@
 .links {
     display: flex;
     gap: 10px;
-    margin-right: 5vh;
+    /* margin-right: 5vh; */
 }
 
 .links a {
