--- a/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
+++ b/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
@@ -5,6 +5,12 @@
     padding: 20px;
     border-radius: 15px;
     box-shadow: 1px 1px 3px #00000030;
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 10px #00000050;
+    transform: scale(1.03);
 }
 
 .media {
