--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,17 +1,39 @@
 .container {
-    width: 1200px;
-    padding: 30px 0px;
-    margin: 0px auto;
+    width: 100%;
     margin-top: 40px;
+    padding-top: 30px;
     text-align: center;
-    background-color: #111;
+    background: #111;
     color: var(--text-light);
+}
+
+.content {
+    width: 1200px;
+    margin: 0px auto;
 }
 
 .logo {
     display:flex;
+    align-items: center;
 }
 
 .logo img {
     margin-right: 15px;
+}
+
+.logo h1 {
+    font-size: 24px;
+}
+
+.topContent {
+    padding: 20px 0px;
+}
+
+.bottomContent {
+    border-top: 1px solid #ffffff20;
+    padding: 20px 0px;
+}
+
+.copyrightText {
+    font-size: 12px;
 }
