changes on the styles of responsiveMediaCards to be on the small size screeens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --text-light: #dfdfdf;
   --text-dark: #222222;
   --text-gray: #797979;
+  --main-color: #0089ff;
   /* --navigationBarHight: 15vh; */
   --logoAbundantColor: red;
 }
@@ -26,6 +27,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
-    width: 1200px;
+    /* width: 1200px; */
+    width: 100%;
     margin: 20px auto;
 }
