--- a/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
+++ b/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
@@ -6,6 +6,7 @@
     border-radius: 15px;
     box-shadow: 1px 1px 3px #00000030;
     transition: 0.3s;
+    width: 90%;
 }
 
 .card:hover {
@@ -15,6 +16,7 @@
 
 .media {
     width: 600px;
+    /* width: 62%; */
     border-radius: 15px;
 }
 
@@ -26,7 +28,7 @@
 .content .title {
     font-size: 24px;
     margin-bottom: 10px;
-    color: #0089ff;
+    color: var(--main-color);
 }
 
 .content .description {
@@ -36,8 +38,8 @@
 
 .content .previewWebsiteButton {
     padding: 15px;
-    border: 1px solid #0089ff;
-    background: #0089ff;
+    border: 1px solid var(--main-color);
+    background: var(--main-color);
     font-weight: bold;
     border-radius: 15px;
     cursor: pointer;
@@ -51,6 +53,21 @@
 
 .previewWebsiteButton:hover {
     background: transparent;
-    color: #0089ff;
+    color: var(--main-color);
     /* transform: translateY(5px) scale(0.95); */
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        flex-direction: column;
+    }
+    .media{
+        width: 100%;
+    }
+    .content .previewWebsiteButton {
+        position: relative;
+        margin-bottom: 0px;
+        margin-top: 20px;
+    }
+
 }
