--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 0px;
-    width: 1200px;
+    /* width: 1200px; */
+    width: 100%;
     margin: 0px auto;
     height: var(--navigationBarHight);
     z-index: 10;
@@ -107,7 +108,6 @@
         display: block;
         cursor: pointer;
     }
-
     .links {
         display: none;
     }
