back nav and footer changes
with some edites with loading page

--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -3,8 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 0px;
-    /* width: 1200px; */
-    width: 100%;
+    width: 1200px;
     margin: 0px auto;
     height: var(--navigationBarHight);
     z-index: 10;
