--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -15,3 +15,43 @@
     /* font-size: 60px; */
     /* color: var(--text-light); */
 }
+
+
+
+.loadingContainer{
+    background-color: var(--text-dark);
+    display: flex;
+    align-items: center;
+    justify-self: center;
+}
+
+.loadingContainer h3{
+    font-size: 15rem;
+    color: transparent;
+    -webkit-text-stroke: 3px var(--main-color);
+    position: relative;
+}
+.loadingContainer h3::before{
+    content: "Loading...";
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    overflow: hidden;
+    color: var(--main-color);
+    border-right: 8px solid var(--main-color);
+    /* transition: 2s ease-in-out; */
+    animation: rightLeftAnimation 2.5s infinite;
+}
+
+@keyframes rightLeftAnimation {
+    0% {
+      width: 0%;
+    }
+    50% {
+      width: 100%;
+    }
+    100% {
+      width:0%;
+    }
+}
+
