--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -27,6 +27,29 @@
 
 .topContent {
     padding: 20px 0px;
+    display:flex;
+    align-items: flex-start;
+    gap: 30px
+}
+
+.contactLinks h2 {
+    font-size: 16px;
+}
+
+.contactLinks {
+    display:flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.followUs h2 {
+    font-size: 16px;
+}
+
+.followUs {
+    display:flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 .bottomContent {
