--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -7,56 +7,7 @@
     color: var(--text-light);
 }
 
-.content {
+.container .content {
     width: 1200px;
     margin: 0px auto;
-}
-
-.logo {
-    display:flex;
-    align-items: center;
-}
-
-.logo img {
-    margin-right: 15px;
-}
-
-.logo h1 {
-    font-size: 24px;
-}
-
-.topContent {
-    padding: 20px 0px;
-    display:flex;
-    align-items: flex-start;
-    gap: 30px
-}
-
-.contactLinks h2 {
-    font-size: 16px;
-}
-
-.contactLinks {
-    display:flex;
-    flex-direction: column;
-    align-items: start;
-}
-
-.followUs h2 {
-    font-size: 16px;
-}
-
-.followUs {
-    display:flex;
-    flex-direction: column;
-    align-items: start;
-}
-
-.bottomContent {
-    border-top: 1px solid #ffffff20;
-    padding: 20px 0px;
-}
-
-.copyrightText {
-    font-size: 12px;
 }
