maping project from config file on the home page

--- a/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
+++ b/src/components/cards/responsive-media-card/ResponsiveMediaCard.module.css
@@ -60,9 +60,13 @@
 @media screen and (max-width: 768px) {
     .card {
         flex-direction: column;
+        width: 90%;
     }
     .media{
         width: 100%;
+    }
+    .content div {
+        text-align: center;
     }
     .content .previewWebsiteButton {
         position: relative;
