Your Solutions Cards

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -17,6 +17,15 @@
 }
 
 
+.cardContainer{
+    width: 1200px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+
 /* loading Page */
 
 .loadingContainer{
