Improvements on design and installed sass

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --bg: #121180;
   /* --text-light: #ffffff; */
   --text-light: #dfdfdf;
-  --text-dark: #222222;
+  --text-dark: #11224d;
   --text-gray: #797979;
   --main-color: #0089ff;
   /* --navigationBarHight: 15vh; */
