--- a/src/components/cards/Card.module.css
+++ b/src/components/cards/Card.module.css
@@ -1,3 +1,4 @@
+/* This css file should only do stuff for Card.jsx component and here I see you put class ".project" which makes no sense because there is no such thing as "project" className in Card.jsx file.*/
 .project {
     display:flex;
     gap: 20px;
@@ -10,7 +11,7 @@
 }
 
 .project:hover {
-    box-shadow: 0px 0px 10px #00000050;
+    box-shadow: 0px 0px 10px #00000040;
     transform: scale(1.03);
 }
 
@@ -28,7 +29,7 @@
 .content .title {
     font-size: 24px;
     margin-bottom: 10px;
-    color: var(--main-color);
+    color: var(--text-dark);
 }
 
 .content .description {
