--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,13 +1,23 @@
 .container {
     width: 100%;
     margin-top: 40px;
-    padding-top: 30px;
+    padding: 30px 0px;
     text-align: center;
-    background: #111;
+    background: #11224d;
     color: var(--text-light);
 }
 
 .container .content {
     width: 1200px;
     margin: 0px auto;
+}
+
+.container .content .topContent {
+    display:flex;
+}
+
+.container .content .topContent .linksColBox {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
