--- a/src/components/cards/Card.module.css
+++ b/src/components/cards/Card.module.css
@@ -3,7 +3,7 @@
     display:flex;
     gap: 20px;
     background: #f6faff;
-    padding: 20px;
+    padding: 20px 0px;
     border-radius: 15px;
     box-shadow: 1px 1px 3px #00000030;
     transition: 0.6s;
