--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -1,4 +1,3 @@
-/* This css file should only do stuff for Card.jsx component and here I see you put class ".project" which makes no sense because there is no such thing as "project" className in Card.jsx file.*/
 .project {
     display: flex;
     gap: 20px;
@@ -92,8 +91,8 @@
     border-radius: 15px;
     box-shadow: 0px 0px 3px #00000040;
     transition: 0.6s;
-    width: 28%;
-    height: 500px;
+    width: 100%;
+    height: 550px;
 }
 
 .solution .content {
@@ -103,11 +102,10 @@
 }
 
 .solution .title {
-    margin-bottom: 20px;
-    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-top: 15px;
     font-weight: 550;
-    font-size: 23px;
-    height: 70px;
+    font-size: 24px;
 }
 
 .solution .icon {
@@ -120,27 +118,32 @@
     overflow-y: auto;
 }
 
-.solution .buttonDiv {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-}
+// .solution .buttonDiv {
+//     position: absolute;
+//     bottom: 20px;
+//     left: 50%;
+//     transform: translateX(-50%);
+// }
 
-.solution .content .previewWebsiteButton {
+.previewWebsiteButton {
     padding: 15px;
     border: 1px solid var(--main-color);
-    background: var(--main-color);
+    background: transparent;
     font-weight: bold;
     border-radius: 15px;
     cursor: pointer;
     font-size: 16px;
-    color: var(--text-light);
-    margin: 0 20px;
+    color: var(--main-color);
     transition: all 0.2s;
+    width: 100%;
+
+    &:hover {
+        background: var(--main-color);
+        color: var(--text-light);
+    }
 }
 
 .solution:hover {
-    box-shadow: 0px 5px 6px #00000050;
+    box-shadow: 0px 5px 6px #00000020;
     transform: translateY(10px);
 }
