--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -7,54 +7,52 @@
     box-shadow: 1px 1px 3px #00000030;
     transition: 0.6s;
     width: 100%;
-}
 
-.project:hover {
-    box-shadow: 0px 0px 10px #00000040;
-    transform: scale(1.03);
-}
+    &:hover {
+        box-shadow: 0px 0px 10px #00000040;
+        transform: scale(1.03);
+    }
 
-.project .media {
-    width: 600px;
-    /* width: 62%; */
-    border-radius: 15px;
-}
+    .media {
+        width: 600px;
+        border-radius: 15px;
+    }
 
-.content {
-    padding: 20px;
-    position: relative;
-}
+    .content {
+        padding: 20px;
+        position: relative;
 
-.content .title {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: var(--text-dark);
-}
+        .title {
+            font-size: 24px;
+            margin-bottom: 10px;
+            color: var(--text-dark);
+        }
 
-.content .description {
-    font-size: 16px;
-    color: var(--text-dark);
-}
+        .description {
+            font-size: 16px;
+            color: var(--text-dark);
+        }
 
-.project .content .previewWebsiteButton {
-    padding: 15px;
-    border: 1px solid var(--main-color);
-    background: var(--main-color);
-    font-weight: bold;
-    border-radius: 15px;
-    cursor: pointer;
-    font-size: 16px;
-    color: var(--text-light);
-    margin-bottom: 20px;
-    position: absolute;
-    bottom: 0;
-    transition: all 0.2s;
-}
+        .previewWebsiteButton {
+            padding: 15px;
+            border: 1px solid var(--main-color);
+            background: var(--main-color);
+            font-weight: bold;
+            border-radius: 15px;
+            cursor: pointer;
+            font-size: 16px;
+            color: var(--text-light);
+            margin-bottom: 20px;
+            position: absolute;
+            bottom: 0;
+            transition: all 0.2s;
 
-.project .previewWebsiteButton:hover {
-    background: transparent;
-    color: var(--main-color);
-    /* transform: translateY(5px) scale(0.95); */
+            &:hover {
+                background: transparent;
+                color: var(--main-color);
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -79,7 +77,6 @@
 
 }
 
-
 /* Solution Styles */
 
 .solution {
@@ -93,57 +90,53 @@
     transition: 0.6s;
     width: 100%;
     height: 550px;
-}
-
-.solution .content {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.solution .title {
-    margin-bottom: 10px;
-    margin-top: 15px;
-    font-weight: 550;
-    font-size: 24px;
-}
-
-.solution .icon {
-    scale: 1.1;
-}
-
-.solution p {
-    margin-bottom: 20px;
-    flex-grow: 1;
-    overflow-y: auto;
-}
-
-// .solution .buttonDiv {
-//     position: absolute;
-//     bottom: 20px;
-//     left: 50%;
-//     transform: translateX(-50%);
-// }
-
-.previewWebsiteButton {
-    padding: 15px;
-    border: 1px solid var(--main-color);
-    background: transparent;
-    font-weight: bold;
-    border-radius: 15px;
-    cursor: pointer;
-    font-size: 16px;
-    color: var(--main-color);
-    transition: all 0.2s;
-    width: 100%;
 
     &:hover {
-        background: var(--main-color);
-        color: var(--text-light);
+        box-shadow: 0px 0px 10px #00000020;
+        transform: translateY(10px);
     }
-}
 
-.solution:hover {
-    box-shadow: 0px 5px 6px #00000020;
-    transform: translateY(10px);
+    .content {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding: 20px;
+
+        .title {
+            margin-bottom: 10px;
+            margin-top: 15px;
+            font-weight: 550;
+            font-size: 24px;
+            color: var(--text-dark);
+        }
+
+        .icon {
+            scale: 1.1;
+        }
+
+        p {
+            margin-bottom: 20px;
+            flex-grow: 1;
+            overflow-y: auto;
+            color: var(--text-dark);
+        }
+
+        .previewWebsiteButton {
+            padding: 15px;
+            border: 1px solid var(--main-color);
+            background: transparent;
+            font-weight: bold;
+            border-radius: 15px;
+            cursor: pointer;
+            font-size: 16px;
+            color: var(--main-color);
+            transition: all 0.2s;
+            width: 100%;
+
+            &:hover {
+                background: var(--main-color);
+                color: var(--text-light);
+            }
+        }
+    }
 }
