--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -3,7 +3,7 @@
     margin: 0px auto;
 
     .content {
-        height: 550px;
+        height: 800px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -50,7 +50,7 @@
         .imgContainer {
             width: 100%;
             display:flex;
-            justify-content: center;
+            // justify-content: center;
         }
     }
 }
