--- a/src/components/showcasing/MainSection.module.scss
+++ b/src/components/showcasing/MainSection.module.scss
@@ -17,6 +17,10 @@
                 color: #11224d;
             }
 
+            span{
+                color: var(--btn-orange);
+            }
+
             .line {
                 height: 2px;
                 width: 80px;
