--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,16 @@
 
 :root {
   --bg: #121180;
-  --text-light: #dfdfdf;
+  /* --text-light: #dfdfdf; */
+  --text-light: #ececec;
   --text-dark: #11224d;
   --text-gray: #797979;
-  --main-color: #0089ff;
+  /* --main-color: #0089ff; */
+  --main-color: #5b83c3;
   --btn-blue-1: #2c599d;
   --btn-orange: #f98125;
   --logoAbundantColor: red;
+  --navigationBarHight: 10vh;
 }
 
 * {
