--- a/src/components/blog/ArticleCard.scss
+++ b/src/components/blog/ArticleCard.scss
@@ -7,11 +7,12 @@
     margin: 20px 0;
     padding: 20px;
     transition: box-shadow 0.3s ease;
-    max-width: 900PX;
+    max-width: 900px;
     min-width: 760px;
 
     &:hover {
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        // box-shadow: 0 4px 8px rgba($main-color, 0.5);
     }
 
     &-thumbnail {
@@ -55,7 +56,7 @@
         &-read-more {
             background-color: transparent;
             border: none;
-            color: #1a8917;
+            color: var(--btn-orange);
             cursor: pointer;
             font-size: 16px;
             text-decoration: underline;
