--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -92,7 +92,7 @@
     height: 550px;
 
     &:hover {
-        box-shadow: 0px 0px 10px #00000020;
+        box-shadow: 0px 0px 8px var(--btn-orange);
         transform: translateY(10px);
     }
 
