--- a/src/components/navigation/navbar/navbar.module.css
+++ b/src/components/navigation/navbar/navbar.module.css
@@ -1,13 +1,32 @@
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: space-around;
     padding: 20px 0px;
-    width: 1200px;
+    /* width: 1200px; */
+    width: 100%;
     margin: 0px auto;
     height: var(--navigationBarHight);
     z-index: 10;
+    background-color: transparent;
+    position: fixed;
+    transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
+
 }
+
+.show {
+    background-color: var(--text-light);
+}
+    .show .links a:hover {
+        background: var(--btn-orange);
+        color: var(--text-light);
+    }
+
+.hidden {
+    transform: translateY(-100%); /* Move the navbar off-screen when hidden */
+}
+
 
 .topPageVectors {
     display: flex;
@@ -63,7 +82,7 @@
 }
 
 .links a:hover {
-    background: #2c599d;
+    background: var(--main-color);
     color: var(--text-light);
 }
 
