--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -17,7 +17,8 @@
 
 
 .show {
-    background-color: var(--text-light);
+    background: linear-gradient(180deg, var(--text-light), rgb(255 255 255 / 81%));
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
     .show .links a:hover {
         background: var(--btn-orange);
