Meat the Team Section

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -25,7 +25,7 @@
     width: 1200px;
     display: flex;
     justify-content: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 40px;
 }
 
