--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -88,7 +88,7 @@
     border-radius: 15px;
     box-shadow: 0px 0px 3px #00000040;
     transition: 0.6s;
-    width: 100%;
+    width: 31%;
     height: 550px;
 
     &:hover {
@@ -139,5 +139,33 @@
                 color: var(--text-light);
             }
         }
+    }
+}
+
+.team{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.4s;
+    width: 18%;
+
+
+    .media{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin-bottom: 15px;
+    }
+    .content .title{
+        font-weight: 500;
+        margin-bottom: 15px;
+        transition: color 0.4s ease-in-out;
+    }
+}
+.team:hover{
+    transform: translateY(-20px);
+
+    .content .title{
+        color: var(--btn-orange);
     }
 }
