--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -92,7 +92,7 @@
     height: 550px;
 
     &:hover {
-        box-shadow: 0px 0px 8px var(--btn-orange);
+        box-shadow: 0px 0px 8px #00000030;
         transform: translateY(10px);
     }
 
