--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
