--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -160,6 +160,7 @@
         height: 150px;
         border-radius: 50%;
         margin-bottom: 15px;
+        object-fit: cover;
     }
 
     .content {
