--- a/src/components/cards/Card.module.scss
+++ b/src/components/cards/Card.module.scss
@@ -6,7 +6,7 @@
     border-radius: 15px;
     box-shadow: 1px 1px 3px #00000030;
     transition: 0.6s;
-    width: 100%;
+    width: 90%;
 
     &:hover {
         box-shadow: 0px 0px 10px #00000040;
@@ -16,6 +16,7 @@
     .media {
         width: 600px;
         border-radius: 15px;
+        margin-left: 10px;
     }
 
     .content {
