contact us section, with show/hide on homepage for other section.

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -29,6 +29,126 @@
     gap: 40px;
 }
 
+.contactContainer {
+    width: 1200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 50px;
+    /* position: relative; */
+    padding: 2rem;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.contact-img {
+    flex: 1;
+    position: relative;
+    height: 400px;
+  }
+  .contact-content {
+    flex: 1;
+    padding: 1rem;
+  }
+
+
+
+
+
+
+
+
+
+.contactContainer {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
+    background-color: transparent;
+    border-radius: 10px;
+    box-shadow: 0 0px 3px rgba(0, 0, 0, 0.1);
+}
+  
+  
+  
+
+  
+  .contact-content h2 {
+    font-size: 2rem;
+    color: var(--text-dark);
+    margin-bottom: 1rem;
+    font-weight: 600;
+  }
+  
+  .contact-content p {
+    font-size: 1rem;
+    color: #666;
+    line-height: 1.6;
+    margin-bottom: 1rem;
+  }
+  
+  .contact-content ul {
+    list-style-type: none;
+    padding: 0;
+    margin-bottom: 1rem;
+  }
+  
+  .contact-content ul li {
+    font-size: 1rem;
+    color: #444;
+    margin-bottom: 0.5rem;
+    display: flex;
+    align-items: center;
+  }
+  
+  .contact-content ul li::before {
+    content: '•';
+    color: var(--btn-orange);
+    font-size: 1.4rem;
+    margin-right: 0.5rem;
+  }
+  .icon{
+    margin-right: 10px;
+  }
+  .contact-content .contactButton {
+    background-color: var(--main-color);
+    color: white;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .contact-content .contactButton:hover {
+    background-color: var(--btn-orange);
+  }
+/*   
+  @media (max-width: 768px) {
+    .contactContainer {
+      flex-direction: column;
+    }
+  
+    .contact-img {
+      width: 100%;
+      height: 200px;
+    }
+  
+    .contact-content {
+      width: 100%;
+    }
+  }
+   */
+
+
+
+
+
+
+
+
 
 /* loading Page */
 
