--- a/src/app/blog/BlogFeed.scss
+++ b/src/app/blog/BlogFeed.scss
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: var(--navigationBarHight);
+    margin-top: calc(#{var(--navigationBarHight)} + 5vh);
 }
