--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -4,7 +4,7 @@
     // padding: 60px 0px;
     // padding-bottom: 30px;
     text-align: center;
-    background: #11224d;
+    background: var(--text-dark);
     color: var(--text-light);
 
     .content {
