--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -127,3 +127,22 @@
     }
 
 }
+.whatsApp{
+    position: fixed;
+    bottom: 5vh;
+    right: 5vh;
+    scale: 3;
+    z-index: 10;
+    transition: all 0.4s ease-in-out;
+
+    a{
+        color: var(--btn-orange);
+    }
+}
+.whatsApp:hover{
+    transform: translateY(-3px);
+    scale: 3.5;
+    a{
+        color: var(--main-color);
+    }
+}
