whatsapp color change

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -214,7 +214,7 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
-    background-color: #f8f9fa;
+    background-color: var(--text-light);
 }
 
 .notFoundBox {
