--- a/src/components/navigation/navbar/navbar.module.scss
+++ b/src/components/navigation/navbar/navbar.module.scss
@@ -136,7 +136,7 @@
     transition: all 0.4s ease-in-out;
 
     a{
-        color: var(--btn-orange);
+        color: green;
     }
 }
 .whatsApp:hover{
