--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -29,256 +29,24 @@
     gap: 40px;
 }
 
-.contactContainer {
-    width: 1200px;
+
+.responsiveContainer {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
     flex-wrap: wrap;
-    padding: 2rem;
-    gap: 50px;
-    border-radius: 10px;
-    box-shadow: 0 0px 3px rgba(0, 0, 0, 0.1);
-}
+    justify-content: center;
+    gap: 40px;
+    width: 1200px;
+    /* width: 100%; */
+    margin: 20px auto;
+    overflow: hidden;
+    transition: max-height 2s ease;
+  }
 
-.contact-img {
-    flex: 1;
-    position: relative;
-    height: 400px;
-}
 
-.contact-img img {
-    object-fit: contain;
-}
-
-.contact-content {
-    flex: 1;
-    padding: 1rem;
-}
-
-.contact-content h2 {
-    font-size: 2rem;
-    color: var(--text-dark);
-    margin-bottom: 1rem;
-    font-weight: 600;
-}
-
-.contact-content p {
-    font-size: 1rem;
-    color: var(--text-gray);
-    line-height: 1.6;
-    margin-bottom: 1rem;
-}
-
-.contact-content ul {
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 1rem;
-}
-
-.contact-content ul li {
-    font-size: 1rem;
-    color: #444;
-    margin-bottom: 0.5rem;
-    display: flex;
-    align-items: center;
-}
-
-.contact-content ul li::before {
-    content: '•';
-    color: var(--main-color);
-    font-size: 1.4rem;
-    margin-right: 0.5rem;
-}
-
-.icon {
-    margin-right: 10px;
-}
-
-.contact-content .contactButton {
-    background-color: var(--main-color);
-    color: var(--text-light);
-    border: none;
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
+.showMoreContaner button{
+    padding: 7px;
     border-radius: 5px;
+    background-color: var(--btn-blue-1);
+    color: var(--text-light);
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.contact-content .contactButton:hover {
-    background-color: var(--btn-orange);
-}
-
-
-/* loading Page */
-
-.loadingContainer {
-    /* background-color: var(--text-dark); */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 15vh;
-    height: 50vh;
-}
-
-.loadingContainer h3 {
-    font-size: 3rem;
-    color: transparent;
-    -webkit-text-stroke: 1px var(--main-color);
-    position: relative;
-}
-
-.loadingContainer h3::before {
-    content: "Loading...";
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    overflow: hidden;
-    color: var(--main-color);
-    border-right: 2px solid var(--main-color);
-    animation: rightLeftAnimation 2.5s infinite;
-}
-
-@keyframes rightLeftAnimation {
-    0% {
-        width: 0%;
-    }
-
-    50% {
-        width: 100%;
-    }
-
-    100% {
-        width: 0%;
-    }
-}
-
-.loadingBox {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    background: var(--text-dark);
-    border-radius: 50%;
-    overflow: hidden;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.loadingBox::before {
-    content: '';
-    position: absolute;
-    inset: -1.25px 18px;
-    background: linear-gradient(315deg, var(--main-color), var(--btn-orange));
-    animation: animate 2.5s linear infinite;
-}
-
-.loadingBox:hover::before {
-    inset: -20px 0px;
-}
-
-@keyframes animate {
-    0% {
-        transform: rotate(360deg);
-    }
-
-    100% {
-        transform: rotate(0deg);
-    }
-}
-
-.loadingBox::after {
-    content: '';
-    position: absolute;
-    inset: 6px;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-.loadingBox .imgLogo {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    transition: 0.5s;
-    pointer-events: none;
-    z-index: 3;
-
-    background: var(--text-light);
-    border-radius: 50%;
-}
-
-
-/* Not found Page */
-
-.notFoundContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    background-color: var(--text-light);
-}
-
-.notFoundBox {
-    position: relative;
-    margin-bottom: 2rem;
-    width: 350px;
-    height: 350px;
-}
-
-.notFoundImage {
-    max-width: 100%;
-    height: auto;
-}
-
-.notFoundTitle {
-    font-size: 6rem;
-    font-weight: bold;
-    color: var(--text-gray);
-    margin: 0;
-}
-
-.notFoundSubtitle {
-    font-size: 2rem;
-    color: var(--text-gray);
-    margin: 0.5rem 0 1rem;
-}
-
-.notFoundText {
-    font-size: 1rem;
-    color: var(--text-gray);
-    max-width: 400px;
-    margin: 0 auto 2rem;
-}
-
-.notFoundButton {
-    display: inline-block;
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
-    color: var(--text-light);
-    background-color: var(--main-color);
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-}
-
-.notFoundButton:hover {
-    background-color: var(--btn-orange);
-}
-
-@media (max-width: 768px) {
-    .notFoundTitle {
-        font-size: 4rem;
-    }
-
-    .notFoundSubtitle {
-        font-size: 1.5rem;
-    }
-}
+  }
