--- a/src/app/blog/BlogFeed.scss
+++ b/src/app/blog/BlogFeed.scss
@@ -2,5 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: calc(#{var(--navigationBarHight)} + 5vh);
 }
