--- a/src/components/blog/ArticleCard.scss
+++ b/src/components/blog/ArticleCard.scss
@@ -5,10 +5,9 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 20px 0;
-    padding: 20px;
+    padding: 40px;
     transition: box-shadow 0.3s ease;
-    max-width: 900px;
-    min-width: 760px;
+    width: 100%;
 
     &:hover {
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
@@ -20,33 +19,34 @@
         height: 100px;
         border-radius: 4px;
         margin-right: 20px;
+        object-fit: cover;
     }
 
     &-title,
-    &-content,
-    &-footer {
+    &-content {
         flex: 1;
     }
 
     &-title {
-        color: #333;
+        color: var(--text-dark);
         font-size: 24px;
         font-weight: bold;
         margin-bottom: 10px;
     }
 
     &-content {
-        color: #666;
+        color: var(--text-gray);
         font-size: 16px;
         line-height: 1.6;
     }
 
     &-footer {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        // justify-content: space-between;
+        // align-items: center;
         //start from bottom of the card
         margin-top: auto;
+        margin-left: auto;
 
         &-update-info {
             color: #999;
@@ -66,6 +66,4 @@
             }
         }
     }
-
-
 }
